proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/expr_mod.py
print 2 % 2
print 1 % 2 % 4
print ((1 % (2)))
