proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/expr_positional.py
def foo(*pos):
	print pos

foo(1, 2, 3, 4, 5)
